# Tensile

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yaml
benchmarks/: CMakeLists.txt
docs/: tensile-project-guide.md
include/: tensile.hpp
include/tensile/: dense_matrix.hpp  dense_vector.hpp
include/tensile/core/: layout_desc.hpp  memory_alloc.hpp
tests/: CMakeLists.txt  init_test.cpp  tests.cpp
